--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Cypress.io
         uses: cypress-io/github-action@v4
         with:
-          start: npm run start
+          start: npm start
 
   
