--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Testing TodoMVC using Cypress",
   "scripts": {
-    "start": "./node_modules/.bin/json-server --static . data.json -m middleware.js --config json-server.json"
+    "start": "node_modules\\.bin\\json-server --static . data.json -m middleware.js --config json-server.json"
   },
   "devDependencies": {
-    "json-server": "0.15.1",
-    "sendmail": "^1.6.1"
+    "json-server": "0.17.0",
+    "sendmail": "^1.6.1",
+    "cypress": "10.3.0"
   }
 }
